# OpenCTK

./: .clang-format  .cmake.conf  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md
.rules/: rules.md
src/libs/core/: CMakeLists.txt  configure.cmake
src/libs/core/examples/: CMakeLists.txt  exp_core_version.cpp  exp_logging.cpp
src/libs/core/include/: algorithm.hpp  aligned_malloc.hpp  any.hpp  application.hpp  argopt.hpp  array_view.hpp  ascii.hpp  assert.hpp  base64.hpp  bit_buffer.hpp  bits.hpp  buffer.hpp  checks.hpp  clock.hpp  compiler.hpp  concurrent.hpp  concurrent_queue.hpp  context_checker.hpp  core.hpp  data_rate.hpp  data_size.hpp  date_time.hpp  divide_round.hpp  elapsed_timer.hpp  enum_flags.hpp  error.hpp  event.hpp  event_loop.hpp  event_loop_thread.hpp  exception.hpp  expected.hpp  fake_clock.hpp  file_wrapper.hpp  filesystem.hpp  flat_set.hpp  format.hpp  frequency.hpp  function_view.hpp  future.hpp  global.hpp  (+212 more)
src/libs/core/source/: core.cpp  core.h  core.hpp  octk_core.cpp  octk_core.h  octk_core.hpp  octk_pch.hpp
src/libs/core/tests/: CMakeLists.txt  tst_aligned_malloc.cpp  tst_array_view.cpp  tst_base64.cpp  tst_base64.hpp  tst_bit_buffer.cpp  tst_buffer.cpp  tst_checks.cpp  tst_clock.cpp  tst_concurrent.cpp  tst_context_checker.cpp  tst_crypto_random.cpp  tst_ctordtor.cpp  tst_data_rate.cpp  tst_data_size.cpp  tst_date_time.cpp  tst_divide_round.cpp  tst_elapsed_timer.cpp  tst_enum_flags.cpp  tst_error.cpp  tst_exception.cpp  tst_fake_clock.cpp  tst_file_utils.cpp  tst_file_wrapper.cpp  tst_filesystem.cpp  tst_frequency.cpp  tst_function_view.cpp  tst_future.cpp  tst_inlined_vector.cpp  tst_metrics.cpp  tst_move_wrapper.cpp  tst_mutex.cpp  tst_mutex_benchmark.cpp  tst_ntp_time.cpp  tst_numeric.cpp  tst_pending_task_safety_flag.cpp  tst_platform_thread.cpp  tst_random.cpp  tst_ref_counted_object.cpp  tst_repeating_task.cpp  (+30 more)
src/libs/imgui/: CMakeLists.txt  configure.cmake
src/libs/imgui/examples/: CMakeLists.txt  exp_imgui_dockspace.cpp  exp_imgui_image.cpp  exp_imgui_rwbmp.cpp  exp_imgui_theme.cpp  exp_imgui_version.cpp  exp_imgui_window.cpp
src/libs/imgui/include/: imgui.hpp  imgui_application.hpp  imgui_constants.hpp  imgui_global.hpp  imgui_theme.hpp  octk_imgui.h  octk_imgui.hpp  octk_imgui_application.hpp  octk_imgui_constants.hpp  octk_imgui_global.hpp  octk_imgui_theme.hpp
src/libs/imgui/source/: imgui.cpp  imgui.hpp  imgui_application.cpp  imgui_application.hpp  imgui_application_p.hpp  imgui_application_sdlgpu3.cpp  imgui_application_sdlgpu3.hpp  imgui_application_sdlopengl3.cpp  imgui_application_sdlopengl3.hpp  imgui_application_sdlrenderer3.cpp  imgui_application_sdlrenderer3.hpp  imgui_constants.hpp  imgui_global.hpp  imgui_pch.hpp  imgui_theme.cpp  imgui_theme.hpp  octk_imgui.cpp  octk_imgui.h  octk_imgui.hpp  octk_imgui_application.cpp  octk_imgui_application.hpp  octk_imgui_application_p.hpp  octk_imgui_application_sdlgpu3.cpp  octk_imgui_application_sdlgpu3.hpp  octk_imgui_application_sdlopengl3.cpp  octk_imgui_application_sdlopengl3.hpp  octk_imgui_application_sdlrenderer3.cpp  octk_imgui_application_sdlrenderer3.hpp  octk_imgui_constants.hpp  octk_imgui_global.hpp  octk_imgui_theme.cpp  octk_imgui_theme.hpp  octk_sdl_p.hpp  sdl_p.hpp
src/libs/imgui/tests/: CMakeLists.txt
src/libs/media/: CMakeLists.txt  configure.cmake
src/libs/media/examples/: CMakeLists.txt
src/libs/media/include/: camera_capture.hpp  color_space.hpp  create_frame_generator.hpp  create_frame_generator_capturer.hpp  custom_video_capturer.hpp  encoded_frame.hpp  encoded_image.hpp  frame_generator.hpp  frame_generator_capturer.hpp  frame_generator_capturer_video_track_source.hpp  frame_instrumentation_data.hpp  frame_utils.hpp  framerate_controller.hpp  generic_frame_info.hpp  hdr_metadata.hpp  i010_buffer.hpp  i210_buffer.hpp  i410_buffer.hpp  i420_buffer.hpp  i422_buffer.hpp  i444_buffer.hpp  media.h  media.hpp  media_constants.hpp  media_global.hpp  media_stream_interface.hpp  media_stream_track.hpp  media_types.hpp  nv12_buffer.hpp  octk_adaptation_constraint.hpp  octk_av1_profile.hpp  octk_av1_svc_config.hpp  octk_balanced_degradation_settings.hpp  octk_blank_detector_desktop_capturer_wrapper.hpp  octk_broadcast_resource_listener.hpp  octk_camera_capture.hpp  octk_codec_specific_info.hpp  octk_codecs_constants.hpp  octk_codecs_h264_types.hpp  octk_codecs_vp8_types.hpp  (+275 more)
src/libs/media/source/: media.cpp  media.h  media.hpp  media_constants.cpp  media_constants.hpp  media_constants_p.hpp  media_global.hpp  media_p.hpp  media_pch.hpp  media_types.cpp  media_types.hpp  octk_frame_transformer_interface.hpp  octk_media.cpp  octk_media.h  octk_media.hpp  octk_media_constants.cpp  octk_media_constants.hpp  octk_media_constants_p.hpp  octk_media_global.hpp  octk_media_p.hpp  octk_media_pch.hpp  octk_media_stream_interface.hpp  octk_media_types.cpp  octk_media_types.hpp  octk_priority.hpp  priority.hpp
src/libs/media/tests/: CMakeLists.txt  tst_balanced_degradation_settings.cpp  tst_broadcast_resource_listener.cpp  tst_camera_capture.cpp  tst_chain_diff_calculator.cpp  tst_color_space.cpp  tst_field_trial.cpp  tst_field_trial_list.cpp  tst_field_trial_parser.cpp  tst_field_trial_units.cpp  tst_field_trials.cpp  tst_frame_dependencies_calculator.cpp  tst_frame_generator.cpp  tst_frame_generator_capturer.cpp  tst_h264_bitstream_parser.cpp  tst_h264_codecs.cpp  tst_h264_encoder.cpp  tst_h264_pps_parser.cpp  tst_h264_simulcast.cpp  tst_h264_sps_parser.cpp  tst_h264_sps_vui_rewriter.cpp  tst_media_context.cpp  tst_rate_control_settings.cpp  tst_rtc_context.cpp  tst_rtc_stats.cpp  tst_rtc_stats_report.cpp  tst_rtp_parameters.cpp  tst_scalability_mode_utils.cpp  tst_scalability_structure.cpp  tst_scalability_structure_full_svc.cpp  tst_scalability_structure_key_svc.cpp  tst_scalability_structure_l2t2_key_shift.cpp  tst_simulated_time_controller.cpp  tst_simulcast_rate_allocator.cpp  tst_simulcast_to_svc_converter.cpp  tst_struct_parameters_parser.cpp  tst_svc_rate_allocator.cpp  tst_video_adaptation_counters.cpp  tst_video_bitrate_allocation.cpp  (+4 more)
(+1662 files in other folders)
